[gd_scene load_steps=7 format=3 uid="uid://7gv6q50fuutj"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_8u1cx"]
[ext_resource type="PackedScene" uid="uid://dbduds4bsaaby" path="res://Scenes/Bullet/Bullet.tscn" id="2_je25s"]
[ext_resource type="PackedScene" uid="uid://n7swir10f5gf" path="res://Scenes/gun_raycast.tscn" id="3_b1uyi"]
[ext_resource type="Texture2D" uid="uid://bm1l1r4r163ex" path="res://Assets/UI/bullet.png" id="3_tqdck"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_emkox"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6b3ky"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_8u1cx")
_bullet_scene = ExtResource("2_je25s")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_emkox")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6b3ky")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0953066)

[node name="Camera3d" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.468479, -0.463024)

[node name="RayCast3d" parent="Head/Camera3d" instance=ExtResource("3_b1uyi")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
target_position = Vector3(0, 0, -700)

[node name="BulletCounter" type="Sprite2D" parent="."]
position = Vector2(1122, 618)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_tqdck")

[node name="BulletLabel" type="RichTextLabel" parent="BulletCounter"]
offset_left = -1530.0
offset_top = -210.0
offset_right = -1464.0
offset_bottom = -170.0
scale = Vector2(20, 20)
text = "20/20
"
tab_size = 0

[node name="gunTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.392157, 0.392157, 0.392157, 0.545098)
